# flake-templates

./: README.md  flake.nix
templates/apps/: flake.nix
templates/default/: flake.nix
templates/devshells/: flake.nix
templates/python/: flake.nix  pyproject.toml
templates/python-ds/: flake.nix  pyproject.toml
